fix layout issues come with animation library. HTML, CSS files got fixed and are now validated.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+html,
+body {
+  overflow-x: hidden;
+}
 :root {
   --color-primary: #2584ff;
   --color-secondary: #00d9ff;
